deploy/flask/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pava-backend-service
spec:
  ports:
  - port: 80
    targetPort: flask-port
    protocol: TCP
  selector:
    app: pava-app
