deploy/flask/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pava-backend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - secretName: example-app-tls
      hosts:
        - platform.mobispaces.eu
  rules:
    - host: platform.mobispaces.eu
      http:
        paths:
          - path: /pava
            pathType: Prefix
            backend:
              service:
                name: pava-backend-service
                port:
                  number: 80
